# debian_package_python

./: README.md  generated-poetry-sources.json  org.flatpak.debian_package_python.yml  pyproject.toml
debian-package-python/: main.py
